--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "name": "ImagesViewerPro",
   "displayName": "Images Viewer Pro",
   "description": "A VS Code extension to view images in a folder",
-  "version": "1.3.3",
+  "version": "1.3.4",
   "publisher": "hyt",
   "engines": {
     "vscode": "^1.80.0"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hytxx/imagesViewerPro.git"
+  },  
+  "icon": "icon.png",
   "categories": [
     "Other"
   ],
